# QsLog

./: .gitignore  CMakeLists.txt
cmake/: QsLog-config.cmake
